fix(css): Align table columns with flexbox

--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ html {
     font-size: 1.4em;
 }
 
-div {
+.col {
     padding-top: 10px;
 }
 
@@ -33,10 +33,15 @@ footer {
 
 .col-amount {
     padding-right: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
 }
 
 .col-result {
-    text-align: right;
     width: 220px;
     padding-right: 20px;
+    display: flex;
+    justify-content: flex-end;
+    align-items: flex-end;
 }
